--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@
   height: 16px;
   margin-right: 8px;
   flex-shrink: 0;
-  margin-top: 4px;
+  margin-top: 6px;
 }
 .redio_group .label_text {
   color: #000000;
@@ -167,4 +167,8 @@
 
 .react-timePicker--custom.error input {
   border-color: red;
+}
+
+.react-timePicker--custom {
+  width: 100%;
 }
