--- a/src/views/apply/Apply.css
+++ b/src/views/apply/Apply.css
@@ -51,6 +51,30 @@
   color: #000000;
 }
 
+.apply .apply_stepper .apply_stepper_item.complete .apply_stepper_item_number i {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: 2px solid;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  border-color: #9c0b0b;
+  background-color: #9c0b0b;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.apply .apply_stepper .apply_stepper_item.complete .apply_stepper_item_number--line {
+  border-color: #9c0b0b !important;
+}
+
+
 .apply .apply_body_form--title {
   font-size: 24px;
   font-style: normal;
@@ -263,6 +287,29 @@
   border-radius: 10px;
   font-size: 16px;
   font-weight: 600;
+}
+
+.back-button {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.apply_body_form_footer button + button {
+  margin-left: 10px;
+}
+
+.apply_body_form--openDialog {
+  color: #0f5bed;
+  text-decoration: underline;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  cursor: pointer;
+  margin-bottom: 15px;
+  display: block;
 }
 
 @media only screen and (max-width: 768px) {
