--- a/src/App.css
+++ b/src/App.css
@@ -192,3 +192,133 @@
 .phoneInput--custom.error {
   border-color: red;
 }
+
+.checkbox_group .label_text {
+  font-size: 16px;
+  font-weight: 500;
+  color: #000000;
+}
+
+.checkbox_group .label_text span {
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.checkbox_group .label_text span:hover {
+  color: #7b1e27;
+  text-decoration-color: #7b1e27;
+}
+
+.terms-and-conditions {
+  padding: 16px;
+  max-height: 200px;
+  overflow-y: scroll;
+  border-radius: 10px;
+  border: 1px solid #dee2e6;
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.terms-and-conditions .red-text {
+  font-weight: 700;
+  color: #9c0b0b;
+}
+
+.terms-and-conditions .black-text {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000000;
+  font-size: 20px;
+}
+
+.terms-and-conditions .red-text.large-size {
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #9c0b0b;
+  line-height: 24px;
+}
+
+.terms-and-conditions .red-text-thin {
+  color: #9c0b0b;
+}
+
+.terms-and-conditions-item-2col {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 25px;
+}
+
+.terms-and-conditions-item-2col .number {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 15px;
+  flex-shrink: 0;
+}
+
+.terms-and-conditions-item-2col .text {
+  margin-top: 5px;
+}
+
+.ReactModal__Body--open {
+  overflow: hidden;
+}
+
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.2) !important;
+  opacity: 1;
+}
+
+.react-modal--custom .ReactModal__Content {
+  padding: 0 !important;
+}
+
+.form_input--label {
+  margin-bottom: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #000000;
+  display: flex;
+  align-items: center;
+}
+
+.form_input--label .form_input--required {
+  color: #dc3545;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 5px;
+  line-height: 1;
+}
+
+.react-select--custom {
+  width: 100%;
+}
+
+.form_input--description {
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+  margin-bottom: 8px;
+}
+
+.form_input--uploadFile {
+  width: 100%;
+  height: 200px;
+  background: #fafafa;
+  cursor: pointer;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.form_input--uploadFile input {
+  display: none;
+}
